Fixed dark mode

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url('https://fontlibrary.org/face/eadui');
+@import url('https://fontlibrary.org/face/brisa-sans');
 
 :root {
 	--MAXWIDTH: 800px;
@@ -11,12 +11,23 @@
 }
 
 @media (prefers-color-scheme: dark) {
+	:root {
+		--DARK-COLOR: #232323 !important;
+		--PRIMARY-COLOR: orangered !important;
+		--BORDER-COLOR: gray !important;
+		--NEUTRAL-FG-COLOR: lightgray !important;
+		--HOVER-FG-COLOR: orangered !important;
+		--ACTIVE-FG-COLOR: orangered !important;
+	}
 	body {
-		background: #333;
-		color: whitesmoke;
+		background: var(--DARK-COLOR) !important;
+		color: whitesmoke !important;
 	}
 	a, h1, h2, h3, h4 {
-		color: mediumseagreen;
+		color: orangered !important;
+	}
+	.playlist-page li {
+		color: var(--DARK-COLOR) !important;
 	}
 }
 
@@ -106,7 +117,7 @@ html, body {
 	width: 100%;
 }
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'BrisaSansRegular', Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5;
